--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,7 @@
 [defaults]
+# Plugin paths
+callback_plugins = ./callback_plugins
+
 # Performance
 callback_whitelist = profile_tasks
 pipelining = True
@@ -6,14 +9,21 @@ gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = /tmp/ansible_cache
 fact_caching_timeout = 3600
+forks = 50
+strategy = free
+async_poll_interval = 1
 
 # Python
 ansible_python_interpreter = /usr/bin/python3
 
-# Output
-stdout_callback = yaml
+# Output - Choose your callback plugin!
+# stdout_callback = yaml               # Default boring output
+# stdout_callback = matrix             # Matrix-style l33t output
+stdout_callback = sailor_jupiter
 display_skipped_hosts = False
 display_ok_hosts = True
+force_color = True
+nocolor = False
 
 # Error handling
 any_errors_fatal = False
