--- a/nvm/tasks/main.yml
+++ b/nvm/tasks/main.yml
@@ -52,11 +52,14 @@
   shell: |
     export NVM_DIR="$HOME/.nvm"
     [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+    # Ensure npm uses the correct prefix for NVM
+    npm config set prefix "$HOME/.nvm/versions/node/$(node --version)"
     npm install -g @anthropic-ai/claude-code
   args:
     executable: /bin/bash
   register: claude_install
   changed_when: "'added' in claude_install.stdout or 'updated' in claude_install.stdout"
+  failed_when: claude_install.rc != 0 and 'EEXIST' not in claude_install.stderr
 
 - name: Install other useful global npm packages
   become: yes
@@ -64,6 +67,8 @@
   shell: |
     export NVM_DIR="$HOME/.nvm"
     [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+    # Ensure npm uses the correct prefix for NVM
+    npm config set prefix "$HOME/.nvm/versions/node/$(node --version)"
     npm install -g {{ item }}
   args:
     executable: /bin/bash
@@ -75,9 +80,9 @@
     - eslint
     - yarn
     - pnpm
-  ignore_errors: yes
   register: npm_install
   changed_when: "'added' in npm_install.stdout or 'updated' in npm_install.stdout"
+  failed_when: npm_install.rc != 0 and 'EEXIST' not in npm_install.stderr
 
 - name: Verify Claude Code installation
   become: yes
@@ -85,12 +90,12 @@
   shell: |
     export NVM_DIR="$HOME/.nvm"
     [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-    which claude-code && claude-code --version
+    which claude && claude --version
   args:
     executable: /bin/bash
   register: claude_verify
   changed_when: false
-  ignore_errors: yes
+  failed_when: false
 
 - name: Display Claude Code installation status
   debug:
