--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@
 callback_plugins = ./callback_plugins
 
 # Performance
-callback_whitelist = profile_tasks
+callback_whitelist = profile_tasks, matrix_notifier
 pipelining = True
 gathering = smart
 fact_caching = jsonfile
@@ -45,7 +45,7 @@ highlight = bright blue
 verbose = blue
 warn = yellow
 error = red
-debug = dark gray
+debug = white
 deprecate = purple
 skip = cyan
 unreachable = bright red
